--- a/src/components/UserMenu/UserMenu.scss
+++ b/src/components/UserMenu/UserMenu.scss
@@ -14,7 +14,7 @@
     }
 
     .fa-list-ul {
-        padding: 0 15px;
+        padding-left: 15px;
     }
 }
 
